fixed spacing issue in experience, modified landing title height to vh

--- a/css/style1.css
+++ b/css/style1.css
@@ -16,6 +16,9 @@
     margin: 0;
     background-color: #f4f4f4;
 }
+.content-section-divider {
+  margin: 50px 0px;
+}
 
 /*  CSS for the landing page
 *   Amazing Photo Credits to: Stefan Stefancik from Pexels
@@ -35,18 +38,18 @@ header#landing{
 }
 div#landing-title{
   color: #f4f4f4;
-  width: 100vh;
+  width: 100vw;
   font-family:  MontserratRegular;
   display:flex;
   flex: 0 0 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0px 20px 20px;
+  padding: 4vh 0px;
   background:rgba(0, 0, 0, 0.3);
 }
 div#landing-title h1{
-  font-size: 80px;
+  font-size: 10vh;
   padding: 20px;
 }
 div#landing-link-section a{
@@ -56,6 +59,7 @@ div#landing-link-section a{
   padding: 10px 20px;
   border-radius: 10px;
   margin-top: 20px;
+  max-height: 5vh;
 }
 .animation-delay-500 {
   -webkit-animation-delay: 0.5s;
@@ -132,15 +136,15 @@ img#profile-photo {
 }
 #content h1{
   font-size: 48px;
-  margin: 70px 0px 50px;
+  margin: 70px 0px 42px;
 }
 #content h2{
   font-size: 32px;
-  margin: 20px 0px 7px;
+  margin: 30px 0px 7px;
 }
 #content h3{
   font-size: 20px;
-  margin: 20px 0px 3px;
+  margin: 10px 0px 3px;
 }
 #content h4{
   font-size: 16px;
